# hailo-ollama-hass

./: CHANGELOG.md  CLAUDE.md  README.md  TASKS.md  hacs.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.github/scripts/: claude_assistant.py
.github/workflows/: claude-assistant.yml  release.yml  tests.yml
custom_components/hailo_ollama/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/hailo_ollama/translations/: de.json  el.json  en.json  es.json  fr.json  it.json  pt-BR.json  pt.json
tests/: conftest.py  test_ai_task.py  test_config_flow.py  test_conversation.py  test_init.py  test_sensor.py  test_services.py
